# cc-plugin

./: .gitignore  .gitmodules  .lsp.json  CLAUDE.md  README.md  README.todo  README.todo.md  crontab.txt  ecosystem.config.js  go.mod  go.sum  main.go  run.sh  skills-lock.json  skills.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
agents/: feature.md  go-naming.md  go-perf.md  golang-code-quality.md  golang-naming.md  golang-network.md  golang-performance-tuning.md  golang-refactor.md  security-reviewer.json
cmd/: distill.go  distill_test.go  main_test.go  ollama.go  ollama_test.go  read_claudemem.go  read_gbrain.go  read_logic.go  reset.go  retain.go  root.go  run.go  state.go  state_test.go  write_agentmemory.go  write_mempalace.go
config/: .claude-mem  .claude.json  .hermes  CLAUDE.global.md  CLAUDE.md  codex.json  config.go  config.toml  default_settings.json  llmbox.json  minimax.json  proxy.json  settings.json
hooks/: hooks.json  post-tool.sh
model/: agentmemory.go  claudemem.go  cursor.go  distiller.go  gbrain.go  mempalace.go  state.go  store.go  store_cursor_test.go  topology.go  topology_ops.go  topology_ops_test.go  topology_test.go
monitors/: monitors.json
output-styles/: README.md  detailed.md
pkg/: README.md
plans/: 2026-06-11-topology-cli.md  2026-06-16-learning-document-skill.md  2026-07-02-architecture-config-externalization.md  2026-07-02-config-externalization.md  (+43 more)
plugins/ultra-explore/skills/changelog/scripts/: changelog_render.py  collect.py  diff_filter.py  exclusion.py  pyproject.toml  utils.py
(+472 files in other folders)
