[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-changelog"
version = "0.1.0"
description = "Git history analysis and CHANGELOG generation with exclusion of non-logic changes"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pathspec>=0.12",
]
[project.scripts]
repo-changelog = "cli:main"

[tool.setuptools]
py-modules = [
    "cli", "collect", "stats", "diff_filter", "changelog_render",
    "discover", "exclusion", "schema", "utils",
]
